package es.ucab.entrenos.modules.subasta.modelos;

public class Subasta {
}
